; ModuleID = '/home/carl/AnghaBench/radare2/libr/reg/extr_value.c_r_read_me27.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/reg/extr_value.c_r_read_me27.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32)* @r_read_me27 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @r_read_me27(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i64 0, i64* %5, align 8
  %6 = bitcast i64* %5 to i32*
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @r_mem_copybits_delta(i32* %6, i32 18, i32* %7, i32 %8, i32 9)
  %10 = bitcast i64* %5 to i32*
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = add nsw i32 %12, 9
  %14 = call i32 @r_mem_copybits_delta(i32* %10, i32 9, i32* %11, i32 %13, i32 9)
  %15 = bitcast i64* %5 to i32*
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = add nsw i32 %17, 18
  %19 = call i32 @r_mem_copybits_delta(i32* %15, i32 0, i32* %16, i32 %18, i32 9)
  %20 = load i64, i64* %5, align 8
  ret i64 %20
}

declare dso_local i32 @r_mem_copybits_delta(i32*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
